--- a/src/shared/styles/_breakpoints.scss
+++ b/src/shared/styles/_breakpoints.scss
@@ -3,4 +3,4 @@ $sm-breakpoint: 480px;
 $md-breakpoint: 768px;
 $lg-breakpoint: 1024px;
 $xl-breakpoint: 1200px;
-$xl-breakpoint: 1200px;
+$xxl-breakpoint: 1600px;
